added a cat image and a few more elements

--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1>hello people</h1> 
-<p>please be very impressed</p>
-<a href="https://google.com" target="_blank" title="google">this is a link btw</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>test page</title>
+</head>
+<body>
+	<h1>hello people</h1> 
+	<p>please be <b>very</b> impressed</p>
+	<a href="https://google.com" target="_blank" title="google">this is a link btw</a>
+	<p>my name is:<br>
+	not hughbert</p>
+	<img src="img/test.png">
+</body>
+</html>
