wrote css for website and changed some html

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Olivia Colomar(Sombra)</title>
+	<title>Olivia Colomar (Sombra)</title>
 	<link rel="icon" href="img/sombra.jpg">
+	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/sombra.css">
 </head>
 <body>
 	<!-- header element -->
@@ -18,7 +20,7 @@
 		<h2>Sombra weapons and abilities</h2>
 		<p>Sombra's main abilty is her hack which can disable an enemies abilities temporarly.</p>
 		<img src="img/sombra2.jpg">
-		<p>Sombra counters and matchups</p>
+		<p class="caption">Sombra counters and matchups</p>
 		<!-- Matchups -->
 		<h2>Easy matchups fro Sombra</h2>
 		<ol>
