finished final touches with color and text

--- a/index.html
+++ b/index.html
@@ -18,11 +18,19 @@
 	<!-- main element -->
 	<main>
 		<h2>Sombra weapons and abilities</h2>
-		<p>Sombra's main abilty is her hack which can disable an enemies abilities temporarly.</p>
+		<ol>
+			<li>Sombra has a submachine gun which she uses as her primary weapon. Her gun is most affective at a close distance.</li>
+			<li>Sombra's stealth allows her to be invisble to enemies, but if you approach an enemy within a 4 meter raduis you will be detected. Stealth also gives 60% movement speed when invisble.</li>
+			<li>Sombra's translocator allows her to teleport back to safety. You can cancel a translocator by pressing f.</li>
+			<li>Sombra's hack allows her to cancel enemies abilities for a temporary time. Her hack lasts 8 seconds and during that time her gun increases damage against the hacked target</li>
+			<li>EMP is an incredible ultimate, it hacks all targets and removes 40% of their health.</li>
+
+		</ol>
+
 		<img src="img/sombra2.jpg">
 		<p class="caption">Sombra counters and matchups</p>
 		<!-- Matchups -->
-		<h2>Easy matchups fro Sombra</h2>
+		<h2>Easy matchups for Sombra</h2>
 		<ol>
 			<li>Tracer: Tracer relies on her abilities which makes her vulnerable to sombra after a hack or emp blast.</li>
 			<li>Wrecking ball: same as Tracer Wrecking ball is extremly reliant on his mobility which comes from his abilities.</li>
@@ -34,6 +42,7 @@
 		<ol>
 			<li>Symmetra: her eyes can obliterate your chances of finding a kill against an enemey.</li>
 			<li>Reaper: Sombra relies on her submachine gun which can only be used close ranged, exactly where reaper specilizes in.</li>
+			<li>Zarya: once her weapon is charged she can wipe out your hp immdiately.</li>
 			<p>For more information about synergies and matchups visit these sites.</p>
 			<ul>
 				<li><a target="_blank" href="https://www.icy-veins.com/overwatch/sombra-synergies-and-matchups">synergies+matchups</a> </li>
