--- a/styletest.html
+++ b/styletest.html
@@ -9,7 +9,7 @@
 </head>
 <body>
       <span>span element</span>
-	<h1 class="uppercase"><span>Heading 1</span> - 1</h1>
+	<h1 class="uppercase">Heading 1 - 1</h1>
 	<h1 class="big">Heading 1 - 2</h1>
 	<h1>Heading 1 - 3</h1>
 	<h2 class="big uppercase">Heading 2 - 1</h2>
